--- a/views/test.ejs
+++ b/views/test.ejs
@@ -1,2 +1,5 @@
 <h1> Testing Post Route </h1>
-<form action="/"
+<form action="/getTimePeriod" method="POST">
+    <input type="text" name="timePeriod" placeholder="enter time period">
+    <button>Get My Distance!</button>
+</form>
