testing html loading

--- a/views/test.ejs
+++ b/views/test.ejs
@@ -1,5 +1,5 @@
 <h1> Testing Post Route </h1>
-<form action="/getTimePeriod" method="POST">
+<form action="/storeTimePeriod" method="POST">
     <input type="text" name="timePeriod" placeholder="enter time period">
     <button>Get My Distance!</button>
 </form>
