--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,8 +85,9 @@
                     <div class="container text-center">
 				        <div class="row">
                             <div class="col-md-5 ml-auto mr-auto download-area">
-				                <a href="http://www.creative-tim.com/product/paper-kit-2" class="btn btn-success btn-round btn-photo">
-                                </a>
+                                <form action="/authorize" method="GET">
+                                    <button type="submit" href="http://www.creative-tim.com/product/paper-kit-2" class="btn btn-success btn-round btn-photo"></button>
+                                </form>
 				            </div>
                         </div>
                     </div>
