--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,9 +85,7 @@
                     <div class="container text-center">
 				        <div class="row">
                             <div class="col-md-5 ml-auto mr-auto download-area">
-                                <form action="/authorize" method="get">
-                                    <button href="/authorize" class="btn">TEST</button>
-                                </form>
+                                <button id="fitbitbutton" class="btn btn-success btn-round btn-photo"></button>
 				            </div>
                         </div>
                     </div>
@@ -119,6 +117,15 @@
 <script src="assets/js/jquery-ui-1.12.1.custom.min.js" type="text/javascript"></script>
 <script src="assets/js/popper.js" type="text/javascript"></script>
 <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+    
+<!-- Fitbit API call-->
+<script>
+$(document).ready(function(){
+    $("#fitbitbutton").click(function(){
+        $.get("/authorize");
+    });
+});
+</script>
 
 <!-- Switches -->
 <script src="assets/js/bootstrap-switch.min.js"></script>
