fixed button error

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,12 +73,12 @@
     			<div class="container">
     				<div class="title-brand">
     					<h1 class="presentation-title">Where could you have gone?</h1>
-        					<div class="fog-low">
-        						<img src="img/fog-low.png" alt="">
-        					</div>
-        					<div class="fog-low right">
-        						<img src="img/fog-low.png" alt="">
-        					</div>
+        					<!--<div class="fog-low">-->
+        					<!--	<img src="img/fog-low.png" alt="">-->
+        					<!--</div>-->
+        					<!--<div class="fog-low right">-->
+        					<!--	<img src="img/fog-low.png" alt="">-->
+        					<!--</div>-->
     				</div>
 
     				<h2 class="presentation-subtitle text-center">Connect with: </h2>
@@ -89,7 +89,7 @@
     				            </div>
                             </div>
                         </div>
-                    <div class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>
+                    <!--<div class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>-->
                 <div class="content-center">
                     <center><h6 class="content-center">Created by
     			<a href="https://github.com/ACalverley/qhacks_2018" target="_blank">
