--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,12 +73,6 @@
     			<div class="container">
     				<div class="title-brand">
     					<h1 class="presentation-title">Where could you have gone?</h1>
-        					<!--<div class="fog-low">-->
-        					<!--	<img src="img/fog-low.png" alt="">-->
-        					<!--</div>-->
-        					<!--<div class="fog-low right">-->
-        					<!--	<img src="img/fog-low.png" alt="">-->
-        					<!--</div>-->
     				</div>
 
     				<h2 class="presentation-subtitle text-center">Connect with: </h2>
@@ -86,10 +80,16 @@
     				        <div class="row">
                                 <div class="col-md-5 ml-auto mr-auto download-area">
                                     <a href="/authorize" class="btn btn-success btn-round btn-photo"></a>
+                                        <div class="fog-low">
+                    						<img src="img/fog-low.png" alt="">
+                    					</div>
+                    					<div class="fog-low right">
+                    						<img src="img/fog-low.png" alt="">
+                    					</div>
     				            </div>
                             </div>
                         </div>
-                    <!--<div class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>-->
+                    <div class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>
                 <div class="content-center">
                     <center><h6 class="content-center">Created by
     			<a href="https://github.com/ACalverley/qhacks_2018" target="_blank">
