--- a/views/maps.ejs
+++ b/views/maps.ejs
@@ -92,9 +92,7 @@
         				<h2 class="presentation-subtitle text-center">Login Using FitBit credentials: </h2>
         			</div>
         		</div>
-            <div class="moving-clouds" style="background-image: url('img/clouds.png'); ">
-
-            </div>
+            <div class="moving-clouds" style="background-image: url('img/clouds.png'); "></div>
     		<h6 class="category category-absolute">Designed and coded by
     			<a href="https://github.com/ACalverley/qhacks_2018" target="_blank">
     				the Qhackers
