--- a/public/CSS/demo.css
+++ b/public/CSS/demo.css
@@ -71,7 +71,7 @@
 
 }
 .navigation-example{
-    background-image: url('../img/ilya-yakover.jpg');
+    background-image: url('../img/worldmap.jpg');
     background-position: center center;
     background-size: cover;
     background-attachment: fixed;
