--- a/views/maps.ejs
+++ b/views/maps.ejs
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    
+    <h1><%=lat%></h1>
     <nav class="navbar navbar-expand-md fixed-top navbar-transparent" color-on-scroll="500">
         <div class="container">
             <div class="navbar-translate">
