fixing index.html

--- a/views/maps.ejs
+++ b/views/maps.ejs
@@ -27,7 +27,6 @@
 </head>
 
 <body>
-    <h1><%=lat%></h1>
     <nav class="navbar navbar-expand-md fixed-top navbar-transparent" color-on-scroll="500">
         <div class="container">
             <div class="navbar-translate">
@@ -103,7 +102,7 @@
             <div class="section section-buttons">
                 <div class="container">
                     <div class="tim-title">
-                        <h2>You have walked:</h2>
+                        <h2>You have walked: <%=lat%></h2>
                     </div>
                     <div id="buttons">
                         <div class="tim-title">
