fixing index.html

--- a/views/maps.ejs
+++ b/views/maps.ejs
@@ -102,7 +102,7 @@
             <div class="section section-buttons">
                 <div class="container">
                     <div class="tim-title">
-                        <h2>You have walked: <%=lat%></h2>
+                        <h2>Latitrude is: <%=lat%>   Longitude is: <%=long%></h2>
                     </div>
                     <div id="buttons">
                         <div class="tim-title">
