--- a/views/maps_2path.ejs
+++ b/views/maps_2path.ejs
@@ -12,13 +12,43 @@
 
     <script>
     var map;
+
+            function initMaps(){
+              var map1ID = 'map1';
+              var map2ID = 'map2';
+
+              // dispay user and uganda child destintaion on seperate maps
+              // displaySeperately(map1ID, map2ID);
+
+              // layer uganda child destination on passed map ID
+              layerMaps(map1ID);
+
+
+              // initMap1();
+              // initMap2();
+              // layerMap2();
+            }
+
+            function displaySeperately(map1ID, map2ID){
+              initMap1();
+              initMap2();
+            }
+
+            function layerMaps(map1ID){
+              initMap1();
+              layerMap2();
+            }
+
+
             function initMap1(){
+              var destination = "<%=user_destination%>";
+
               var markerArray1 = [];
 
               // Instantiate a directions service.
               var directionsService1 = new google.maps.DirectionsService;
     
-              // Create a map and center it on Manhattan.
+              // Create a map and center it on user location.
               map = new google.maps.Map(document.getElementById('map1'), {
                 zoom: 13,
                 center: {lat: <%=userLat%>, lng: <%=userLong%>}
@@ -32,22 +62,22 @@
     
               // Display the route between the initial start and end selections.
               calculateAndDisplayRoute(
-                  directionsDisplay1, directionsService1, markerArray1, stepDisplay1, map);
-
-              // initMap2();
+                  directionsDisplay1, directionsService1, markerArray1, stepDisplay1, map, destination);
             }
 
             function initMap2(){
+              var destination = "<%=ugandaChild_destination%>";
+
               var markerArray2 = [];
     
               // Instantiate a directions service.
               var directionsService2 = new google.maps.DirectionsService;
     
-              // Create a map and center it on Manhattan.
-              // map = new google.maps.Map(document.getElementById('map2'), {
-              //   zoom: 13,
-              //   center: {lat: <%=userLat%>, lng: <%=userLong%>}
-              // });
+              // Create a new map and center on user location
+              map = new google.maps.Map(document.getElementById('map2'), {
+                zoom: 13,
+                center: {lat: <%=userLat%>, lng: <%=userLong%>}
+              });
     
               // Create a renderer for directions and bind it to the map.
               var directionsDisplay2 = new google.maps.DirectionsRenderer({map: map});
@@ -57,11 +87,30 @@
     
               // Display the route between the initial start and end selections.
               calculateAndDisplayRoute(
-                  directionsDisplay2, directionsService2, markerArray2, stepDisplay2, map);
+                  directionsDisplay2, directionsService2, markerArray2, stepDisplay2, map, destination);
+            }
+
+            function layerMap2(){
+              var destination = "<%=ugandaChild_destination%>";
+
+              var markerArray2 = [];
+    
+              // Instantiate a directions service.
+              var directionsService2 = new google.maps.DirectionsService;
+    
+              // add second direction display on top of existing map
+              var directionsDisplay2 = new google.maps.DirectionsRenderer({map: map});
+    
+              // Instantiate an info window to hold step text.
+              var stepDisplay2 = new google.maps.InfoWindow;
+    
+              // Display the route between the initial start and end selections.
+              calculateAndDisplayRoute(
+                  directionsDisplay2, directionsService2, markerArray2, stepDisplay2, map, destination);
             }
     
             function calculateAndDisplayRoute(directionsDisplay, directionsService,
-                markerArray, stepDisplay, map) {
+                markerArray, stepDisplay, map, destination) {
               console.log(map);
               // First, remove any existing markers from the map.
               for (var i = 0; i < markerArray.length; i++) {
@@ -71,8 +120,8 @@
               // Retrieve the start and end locations and create a DirectionsRequest using
               // WALKING directions.
               directionsService.route({
-                origin: "<%= origin %>",
-                destination: "<%= destination %>",
+                origin: "<%= origin %>",  
+                destination: destination,
                 travelMode: 'WALKING'
               }, function(response, status) {
                 // Route the directions and pass the response to a function to create
@@ -114,90 +163,8 @@
             }
     </script>
 
-    <script type="text/javascript" async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9b1eU1IE9Tdh0Bo8y8GMabGhMiQ-XTps&libraries=drawing&callback=initMap1"></script>
+    <script type="text/javascript" async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9b1eU1IE9Tdh0Bo8y8GMabGhMiQ-XTps&libraries=drawing&callback=initMaps"></script>
 
-   <!--  <script>
-        function initMap() {
-              var markerArray = [];
-    
-              // Instantiate a directions service.
-              var directionsService = new google.maps.DirectionsService;
-    
-              // Create a map and center it on Manhattan.
-              var map = new google.maps.Map(document.getElementById('map1'), {
-                zoom: 13,
-                center: {lat: <%=userLat%>, lng: <%=userLong%>}
-              });
-    
-              // Create a renderer for directions and bind it to the map.
-              var directionsDisplay = new google.maps.DirectionsRenderer({map: map});
-    
-              // Instantiate an info window to hold step text.
-              var stepDisplay = new google.maps.InfoWindow;
-    
-              // Display the route between the initial start and end selections.
-              calculateAndDisplayRoute(
-                  directionsDisplay, directionsService, markerArray, stepDisplay, map);
-              // Listen to change events from the start and end lists.
-              // var onChangeHandler = function() {
-              //   calculateAndDisplayRoute(
-              //       directionsDisplay, directionsService, markerArray, stepDisplay, map);
-              // };
-              // document.getElementById('start').addEventListener('change', onChangeHandler);
-              // document.getElementById('end').addEventListener('change', onChangeHandler);
-            }
-    
-            function calculateAndDisplayRoute(directionsDisplay, directionsService,
-                markerArray, stepDisplay, map) {
-              // First, remove any existing markers from the map.
-              for (var i = 0; i < markerArray.length; i++) {
-                markerArray[i].setMap(null);
-              }
-    
-              // Retrieve the start and end locations and create a DirectionsRequest using
-              // WALKING directions.
-              directionsService.route({
-                origin: "<%= origin %>",
-                destination: "<%= destination %>",
-                travelMode: 'WALKING'
-              }, function(response, status) {
-                // Route the directions and pass the response to a function to create
-                // markers for each step.
-                if (status === 'OK') {
-                  // document.getElementById('warnings-panel').innerHTML =
-                  //     '<b>' + response.routes[0].warnings + '</b>';
-                  directionsDisplay.setDirections(response);
-                  // showSteps(response, markerArray, stepDisplay, map);
-                } else {
-                  window.alert('Directions request failed due to ' + status);
-                }
-              });
-            }
-    
-            function showSteps(directionResult, markerArray, stepDisplay, map) {
-              // For each step, place a marker, and add the text to the marker's infowindow.
-              // Also attach the marker to an array so we can keep track of it and remove it
-              // when calculating new routes.
-              var myRoute = directionResult.routes[0].legs[0];
-              for (var i = 0; i < myRoute.steps.length; i++) {
-                var marker = markerArray[i] = markerArray[i] || new google.maps.Marker;
-                marker.setMap(map);
-                marker.setPosition(myRoute.steps[i].start_location);
-                attachInstructionText(
-                    stepDisplay, marker, myRoute.steps[i].instructions, map);
-              }
-            }
-    
-            function attachInstructionText(stepDisplay, marker, text, map) {
-              google.maps.event.addListener(marker, 'click', function() {
-                // Open an info window when the marker is clicked on, containing the text
-                // of the step.
-                stepDisplay.setContent(text);
-                stepDisplay.open(map, marker);
-              });
-            }
-    </script>
-    <script type="text/javascript" async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9b1eU1IE9Tdh0Bo8y8GMabGhMiQ-XTps&libraries=drawing&callback=initMap"></script> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript">
