changed some text in html for 7 day result

--- a/views/maps_1path.ejs
+++ b/views/maps_1path.ejs
@@ -250,7 +250,7 @@
         <!-- Main Map section -->
         <div class="container" style="padding-left: 80px;">
             <div class="tim-title">
-                <h2 padding=15px>Over the past 30 days, you have travelled
+                <h2 padding=15px>Over the past 7 days, you have travelled
                     <%= distanceTraveled %> km</h2>
             </div>
 
@@ -287,7 +287,7 @@
                             <div class="card-header"><b>Perspective</b></div>
                             <div class="card-body">
 
-                                <p class="card-text">According to the Uganda Bureau of Statistics, Ugandan children have to walk an average of 12km a day for the opportunity to get an education. This would have been their trek over ### days. </p>
+                                <p class="card-text">According to the Uganda Bureau of Statistics, Ugandan children have to walk an average of 12km a day for the opportunity to get an education. This would have been their trek over 7 days. </p>
                             </div>
                         </div>
                     </div>
