--- a/views/maps_2path.ejs
+++ b/views/maps_2path.ejs
@@ -339,8 +339,8 @@
                             <div class="card-header">Distance History</div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">1 day</li>
-                                <li class="list-group-item">1 week</li>
-                                <li class="list-group-item" style="background: #51bcda;">1 month</li>
+                                <li class="list-group-item" style="background: #51bcda;">1 week</li>
+                                <li class="list-group-item">1 month</li>
                                 <li class="list-group-item">All time</li>
                             </ul>
                         </div>
@@ -360,7 +360,7 @@
                             <div class="card-header"><b>Perspective</b></div>
                             <div class="card-body">
 
-                                <p class="card-text">According to the Uganda Bureau of Statistics, Ugandan children have to walk an average of 12km a day for the opportunity to get an education. This would have been their trek over ### days. </p>
+                                <p class="card-text">According to the Uganda Bureau of Statistics, Ugandan children have to walk an average of 12km a day for the opportunity to get an education. This would have been their trek over 7 days. </p>
                             </div>
                         </div>
                     </div>
