deleted some old commented code

--- a/views/maps_1path.ejs
+++ b/views/maps_1path.ejs
@@ -314,9 +314,10 @@
             <hr>
             <div class="credits ml-auto">
                 <span class="copyright">
-                                © <script>document.write(new Date().getFullYear())
-                        </script>, The QHackers and Creative Tim
-                        </span>
+                            © <script>document.write(new Date().getFullYear())
+                        </script>,<a href="https://github.com/ACalverley/qhacks_2018" target="_blank"> The QHackers </a> &
+                        <a href="https://www.creative-tim.com" target="_blank">Creative Tim </a>
+                </span>
             </div>
         </div>
     </footer>
