changed callback so website is working properly

--- a/views/maps_2path.ejs
+++ b/views/maps_2path.ejs
@@ -18,10 +18,10 @@
               var map2ID = 'map2';
 
               // dispay user and uganda child destintaion on seperate maps
-              // displaySeperately(map1ID, map2ID);
+              displaySeperately(map1ID, map2ID);
 
               // layer uganda child destination on passed map ID
-              layerMaps(map1ID);
+              // layerMaps(map1ID);
 
 
               // initMap1();
@@ -323,7 +323,7 @@
         <!-- Main Map section -->
         <div class="container" style="padding-left: 80px;">
             <div class="tim-title">
-                <h2 padding=15px>Over the past 30 days, you have travelled
+                <h2 padding=15px>Over the past 3 months, you have travelled
                     <%= distanceTraveled %> km</h2>
             </div>
 
@@ -339,8 +339,8 @@
                             <div class="card-header">Distance History</div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">1 day</li>
-                                <li class="list-group-item" style="background: #51bcda;">1 week</li>
-                                <li class="list-group-item">1 month</li>
+                                <li class="list-group-item">1 week</li>
+                                <li class="list-group-item" style="background: #51bcda;">3 months</li>
                                 <li class="list-group-item">All time</li>
                             </ul>
                         </div>
@@ -360,7 +360,7 @@
                             <div class="card-header"><b>Perspective</b></div>
                             <div class="card-body">
 
-                                <p class="card-text">According to the Uganda Bureau of Statistics, Ugandan children have to walk an average of 12km a day for the opportunity to get an education. This would have been their trek over 7 days. </p>
+                                <p class="card-text">According to the Uganda Bureau of Statistics, Ugandan children have to walk an average of 12km a day for the opportunity to get an education. This would have been their trek, <b>soley for eductation</b>, over the past 3 months. </p>
                             </div>
                         </div>
                     </div>
