--- a/views/maps_1path.ejs
+++ b/views/maps_1path.ejs
@@ -13,22 +13,23 @@
     <script>
         function initMap() {
               var markerArray = [];
-    
+
               // Instantiate a directions service.
               var directionsService = new google.maps.DirectionsService;
-    
+
               // Create a map and center it on Manhattan.
               var map = new google.maps.Map(document.getElementById('map'), {
                 zoom: 13,
                 center: {lat: <%=userLat%>, lng: <%=userLong%>}
               });
-    
+
               // Create a renderer for directions and bind it to the map.
               var directionsDisplay = new google.maps.DirectionsRenderer({map: map});
-    
+
               // Instantiate an info window to hold step text.
+              // NOT WORKING
               var stepDisplay = new google.maps.InfoWindow;
-    
+
               // Display the route between the initial start and end selections.
               calculateAndDisplayRoute(
                   directionsDisplay, directionsService, markerArray, stepDisplay, map);
@@ -40,14 +41,14 @@
               // document.getElementById('start').addEventListener('change', onChangeHandler);
               // document.getElementById('end').addEventListener('change', onChangeHandler);
             }
-    
+
             function calculateAndDisplayRoute(directionsDisplay, directionsService,
                 markerArray, stepDisplay, map) {
               // First, remove any existing markers from the map.
               for (var i = 0; i < markerArray.length; i++) {
                 markerArray[i].setMap(null);
               }
-    
+
               // Retrieve the start and end locations and create a DirectionsRequest using
               // WALKING directions.
               directionsService.route({
@@ -67,7 +68,7 @@
                 }
               });
             }
-    
+
             function showSteps(directionResult, markerArray, stepDisplay, map) {
               // For each step, place a marker, and add the text to the marker's infowindow.
               // Also attach the marker to an array so we can keep track of it and remove it
@@ -81,7 +82,7 @@
                     stepDisplay, marker, myRoute.steps[i].instructions, map);
               }
             }
-    
+
             function attachInstructionText(stepDisplay, marker, text, map) {
               google.maps.event.addListener(marker, 'click', function() {
                 // Open an info window when the marker is clicked on, containing the text
@@ -91,11 +92,11 @@
               });
             }
     </script>
-    <script type="text/javascript" async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9b1eU1IE9Tdh0Bo8y8GMabGhMiQ-XTps&libraries=drawing&callback=initMap"></script>
+    <script type="text/javascript" async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9YrkTByrWhKXp8wNIQ5w6IgoiCD2ae0w&libraries=drawing&callback=initMap"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript">
-        $(window).scroll(function() {    
+        $(window).scroll(function() {
             var scroll = $(window).scrollTop();
 
             if (scroll >= 10) {
@@ -188,32 +189,7 @@
             </div>
         </div>
     </nav>
-<!-- 
-<div class="navbar navbar-default navbar-fixed-top" data-spy="affix" data-offset-top="400">
-  <div class="container">
-    <div class="navbar-header">
-      <a href="#" class="navbar-brand">Brand</a>
-      <a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <i class="fa fa-bars"></i>
-      </a>
-    </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-      </ul>
-      <ul class="nav navbar-right navbar-nav">
-        <li>
-          <a href="#">Link</a>
-        </li>
-        <li>
-          <a href="#"><span class="badge">2</span></a>
-        </li>
-      </ul>
-    </div>      
-  </div>
-</div>
--->
+
     <!-- Landing Page -->
     <div class="wrapper">
         <div class="page-header section-dark" style="background-image: url('img/antoine-barres.jpg')">
@@ -229,13 +205,6 @@
                             <img src="img/fog-low.png" alt="">
                         </div>
                     </div>
-
-                   <!--  <h2 class="presentation-subtitle text-center">Connect with: </h2>
-                    <div class="row">
-                        <div class="col-md-5 ml-auto mr-auto download-area">
-                            <center><a href="/authorize" class="btn btn-success btn-round btn-photo"></a></center>
-                        </div>
-                    </div> -->
                 </div>
             </div>
             <h6 class="category category-absolute">Created by
